# MAMASTOCK-LOCAL

./: .env.development  .env.example  .env.test  .eslintrc.cjs  .gitignore  Build-Installer.ps1  Build-UserMSI.ps1  CHANGELOG.md  README-cloud.md  README-offline.md  README.md  build.ps1  index.html  jsconfig.json  package-lock.json  package.json  playwright.config.ts  sidebar.plan.json  src-inventory.json  src-inventory.md  tailwind.config.ts  tauri.conf.json  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts  vitest.config.ts
assets/: README.md
docs/: FRONTMAP.md  QA.md  STATUS.md  diagnostic-modules.md  front_map.json  verifications.md
public/: service-worker.dev-disabled.js
reports/: src-inventory.json  src-inventory.md
scripts/: Build-UserMSI.ps1  check-capabilities-runtime.ts  check-capabilities.js  check-node-native.js  check-pg.mjs  check-tauri-imports.js  check-tauri-plugins.js  codemod-unify-isTauri.cjs  codemod-unify-isTauri.ts  dbSmoke.mjs  doctor.ps1  fix-sql-capabilities.js  front-audit.js  generate-navigation.cjs  generate-navigation.ts  icon-fallback.js  migrate-pg.cjs  migration-smoke.js  move-db-once.js  normalize-capabilities.js  paths.js  postinstall-check.ps1  pwa-reset.js  reset-webview-cache.ps1  scan-src.js  seed-admin.js  seedAdmin.js  sqlite-apply.js  sqlite-inspect.js  sync-sql-cap-window.js
src/: App.jsx  AppShell.tsx  PrivateOutlet.jsx  ProtectedRoute.jsx  ScrollRestoration.jsx  Sidebar.jsx  Sidebar.tsx  appFs.ts  fsSafe.ts  globals.css  index.css  isTauri.ts  license.js  main.jsx  paths.ts  registerSW.js  router.autogen.tsx  router.jsx  router.tsx  (+7 more)
src-tauri/: Cargo.toml  Cargo.toml.bak  Cargo.toml.bak.20250909-090740  Cargo.toml.bak.20250909-112144  Cargo.toml.bak.20250909-115234  build.rs  tauri.conf.json  tauri.conf.json.bak
src-tauri/capabilities/: default.json  main.json  main.json.bak.20250909-112709  main.json.bak.20250909-113004  main.json.bak.20250909-115234  main.json.bak.20250909-131842  sql.json  sql.json.bak.20250909-112709  sql.json.bak.20250909-113004  sql.json.bak.20250909-115234  sql.json.disabled
src-tauri/icons/: icon.icns
src-tauri/installer/: config.json
src-tauri/installer/nsis/: 01_write_config.nsh  license-en.rtf  tauri.nsis
src-tauri/installer/wix/: Build-UserMSI.ps1  README.md  bundle.wxs  en-US.wxl  fr-FR.wxl  license-fr.rtf  main.wxs  main.wxs.bak  ui-custom.wxs
src-tauri/migrations/pg/: 001_init.sql  004_facture_pieces_pg.sql  010_views_triggers.sql
src-tauri/src/: main.rs  main.rs.bak  main.rs.bak-20250908-163036
(+756 files in other folders)
