[package]
name = "mamastock"
version = "0.1.0"
description = "MamaStock Local"
edition = "2021"

# Pas de [lib] ici

# [[bin]] facultatif (par défaut src/main.rs est utilisé)
# [[bin]]
# name = "mamastock"
# path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["wry", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"          # utilisé seulement en release
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-shell = "2"
# tauri-plugin-devtools = "2"   # optionnel si tu veux un plugin devtools

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
