[package]
name = "mamastock"
version = "0.1.0"
description = "MamaStock Local"
edition = "2021"

# Pas de [lib] ici

# [[bin]] facultatif (par dÃƒÆ’Ã‚Â©faut src/main.rs est utilisÃƒÆ’Ã‚Â©)
# [[bin]]
# name = "mamastock"
# path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-log = "2"
tauri-plugin-devtools = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite", "postgres"] }
tauri-plugin-single-instance = "2"
log = "0.4"
[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]

